# joerender

./: .gitignore  .gitmodules  CMakeLists.txt
build-xcode/: joerender-Info.plist
build-xcode/glee/glee.xcodeproj/: project.pbxproj
build-xcode/glfw/glfw.xcodeproj/: project.pbxproj
build-xcode/joelang/: compile_runtime.make
build-xcode/joelang/include/joelang/: config.h
build-xcode/joelang/joelang.xcodeproj/: project.pbxproj
build-xcode/joelang/ucpp/ucpp.xcodeproj/: project.pbxproj
build-xcode/joemath/joemath.xcodeproj/: project.pbxproj
build-xcode/joerender.xcodeproj/: project.pbxproj
build-xcode/joerender.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-xcode/joerender.xcworkspace/: contents.xcworkspacedata
data/: clear_blue.jfx
src/: main.cpp
